--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 project(wordle)
 
 set(CMAKE_CXX_STANDARD 20)
-SET(GCC_COVERAGE_COMPILE_FLAGS "-ggdb")
+SET(GCC_COVERAGE_COMPILE_FLAGS "-ggdb -pthread")
 
 
 
